chore: resolve merge conflicts with development
Agent-Logs-Url: https://github.com/DiaconoApp/DiaconoBackEnd/sessions/e888ab8c-4921-42fa-8872-1dddbd3de378

Co-authored-by: fabiamdamaceno <179029884+fabiamdamaceno@users.noreply.github.com>